--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Navbar -->
     <nav class="fixed top-0 left-0 w-full flex justify-between items-center p-4 bg-white/30 backdrop-blur-md shadow-lg rounded-lg z-10">
 
-        <img src="/resources/Img/milogo-sinfondo.ico" alt="Logo" class="w-22 h-12">
+        <img src="./resources/Img/milogo-sinfondo.ico" alt="Logo" class="w-22 h-12">
 
         <div class="text-xl text-[#f5f0e6] hidden md:block">Steak House espera por ti!</div>
 
@@ -42,21 +42,21 @@
     <!-- Banner de imágenes -->
     <section class="relative overflow-hidden mt-4">
         <div id="slider" class="flex transition-transform duration-700 ease-in-out mt-20">
-            <img src="/resources/banner/foto1.jpg" alt="Imagen 1" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto2.jpg" alt="Imagen 2" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto3.png" alt="Imagen 3" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto4.jpg" alt="Imagen 4" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto5.jpg" alt="Imagen 5" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto6.jpg" alt="Imagen 6" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto7.jpg" alt="Imagen 7" class="w-1/2 h-64 object-cover flex-shrink-0">
-            <img src="/resources/banner/foto8.png" alt="Imagen 8" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto1.jpg" alt="Imagen 1" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto2.jpg" alt="Imagen 2" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto3.png" alt="Imagen 3" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto4.jpg" alt="Imagen 4" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto5.jpg" alt="Imagen 5" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto6.jpg" alt="Imagen 6" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto7.jpg" alt="Imagen 7" class="w-1/2 h-64 object-cover flex-shrink-0">
+            <img src="./resources/banner/foto8.png" alt="Imagen 8" class="w-1/2 h-64 object-cover flex-shrink-0">
         </div>
     </section>
 
     <!-- Sobre nosotros -->
     <section id="SobreNosotros" class="flex flex-col items-center p-8 animate__animated animate__fadeIn">
         <div class="flex flex-col md:flex-row bg-white/30 backdrop-blur-md shadow-lg rounded-lg" >
-            <img src="/resources/Img/milogo-sinfondo.png" alt="Restaurant" class="w-full md:w-1/2 object-cover w-30 h-30">
+            <img src="./resources/Img/milogo-sinfondo.png" alt="Restaurant" class="w-full md:w-1/2 object-cover w-30 h-30">
             <div class="p-6 mt-14">
                 <h1 class="text-4xl text-[#f5f0e6] font-bold mb-4">TE DAMOS LA BIENVENIDA</h1>
                 <h2 class="text-2xl text-[#f5f0e6] mb-4">Disfruta de la mejor gastronomía</h2>
@@ -75,21 +75,21 @@
 
             <!-- Platillo 1 -->
             <div class="bg-white/30 backdrop-blur-md text-[#f5f0e6] shadow-lg rounded-lg p-4 cursor-pointer hover:bg-[#6b6b6b]" onclick="selectDish('Chicken salad - $13.00', this)">
-                <img src="/resources/Img/plato (1).png" alt="chicken salad" class="rounded-lg mb-4">
+                <img src="./resources/Img/plato (1).png" alt="chicken salad" class="rounded-lg mb-4">
                 <h3 class="text-xl font-semibold">Chicken salad</h3>
                 <p class="text-beige-100">$13.00</p>
             </div>
 
             <!-- Platillo 2 -->
             <div class="bg-white/30 backdrop-blur-md text-[#f5f0e6] shadow-lg rounded-lg p-4 cursor-pointer hover:bg-[#6b6b6b]" onclick="selectDish('Assorted dish - $12.00', this)">
-                <img src="/resources/Img/plato(2).png" alt="Assorted dish" class="rounded-lg mt-7 mb-12">
+                <img src="./resources/Img/plato(2).png" alt="Assorted dish" class="rounded-lg mt-7 mb-12">
                 <h3 class="text-xl text-[#f5f0e6] font-semibold mt-4">Assorted dish</h3>
                 <p class="text-beige-100">$12.00</p>
             </div>
 
             <!-- Platillo 3 -->
             <div class="bg-white/30 backdrop-blur-md text-[#f5f0e6] shadow-lg rounded-lg p-4 cursor-pointer hover:bg-[#6b6b6b]" onclick="selectDish('Eggs salad - $10.00', this)">
-                <img src="/resources/Img/plato (3).png" alt="Eggs salad" class="rounded-lg mb-4">
+                <img src="./resources/Img/plato (3).png" alt="Eggs salad" class="rounded-lg mb-4">
                 <h3 class="text-xl font-semibold">Eggs salad</h3>
                 <p class="text-beige-100">$10.00</p>
             </div>
@@ -128,7 +128,7 @@
         </div>
     </footer>
 
-    <script src="/page/script.js"></script>
+    <script src="./page/script.js"></script>
 
 </body>
 </html>
