--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         <div class="text-sm text-[#f5f0e6] mr-4">Creador Joserraul Mundaray</div>
         <div class="flex space-x-4">
             <a href="https://www.instagram.com/joserraulm/" target="_blank">
-                <img src="/resources/Img/instagram-line.svg" alt="Instagram" class="w-6 h-6 text-[#f5f0e6] hover:text-[#f5f0e6]">
+                <img src="./resources/Img/instagram-line.svg" alt="Instagram" class="w-6 h-6 text-[#f5f0e6] hover:text-[#f5f0e6]">
             </a>
             <a href="https://github.com/Joserraul" target="_blank">
-                <img src="/resources/Img/github-fill.svg" alt="GitHub" class="w-6 h-6 text-[#f5f0e6] hover:text-[#f5f0e6]">
+                <img src="./resources/Img/github-fill.svg" alt="GitHub" class="w-6 h-6 text-[#f5f0e6] hover:text-[#f5f0e6]">
             </a>
             <a href="https://wa.me/+584248973345" target="_blank">
-                <img src="/resources/Img/whatsapp-line.svg" alt="WhatsApp" class="w-6 h-6 text-[#f5f0e6] hover:text-[#f5f0e6]">
+                <img src="./resources/Img/whatsapp-line.svg" alt="WhatsApp" class="w-6 h-6 text-[#f5f0e6] hover:text-[#f5f0e6]">
             </a>
         </div>
     </footer>
