--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p class="mb-6 text-[#f5f0e6] ">Sumérgete en una experiencia culinaria única, donde tradición y creatividad se fusionan en cada plato. En Steak House, no solo servimos comida, creamos momentos inolvidables. Desde entradas exquisitas hasta postres irresistibles, cada bocado está diseñado para deleitar tus sentidos.<br>
 
                     ✨ Sabores auténticos. Ambiente acogedor. Momentos memorables.<br>
-                    ¡Ven y descubre por qué Dinner Restaurante es el lugar donde los sabores cobran vida! 💫</p>
+                    ¡Ven y descubre por qué Steak House es el lugar donde los sabores cobran vida! 💫</p>
             </div>
         </div>
     </section>
